# RosTo32_serial_protocol

./: CMakeLists.txt  README.md  RosTo32_serial_protocol.sh  package.xml
src/: error_protect.cpp  serial_protocol_node.cpp
src/barcode_reader/: CMakeLists.txt  package.xml
src/barcode_reader/include/barcode_reader/: QRcodeScanner.hpp
src/barcode_reader/src/: barcode_reader_node.cpp
src/serial_protocol/include/serial_protocol/: serial_port.hpp
src/serial_protocol/src/: serial_protocol_node.cpp
